--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "amparo-fastify": "^0.1.46",
-        "better-sqlite3": "^11.10.0",
+        "better-sqlite3": "12.0.0",
         "fastify": "^5.4.0",
         "sqlite": "^5.1.1",
         "zod": "^3.25.67"
